manifests/ingress/simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  # Redirect all traffic to service alpaca-prod on port 8080
  defaultBackend:
    service:
      name: alpaca-prod
      port:
        number: 8080
